# verification-lib

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: certificate_chain.rs  kds.rs  lib.rs  pinned_certs.rs  sev_verification.rs  snp_report.rs
src/crypto/: crypto_nossl.rs  crypto_openssl.rs  crypto_pure_rust.rs  mod.rs
src/snp/: mod.rs  report.rs
tests/: common.rs  tests_native.rs  tests_node.rs  verification_test.rs
